--- a/assets/index.html
+++ b/assets/index.html
@@ -19,8 +19,13 @@
             <div class="boxes caracteristicas">
                 <img class="img" src="../assets/img/maria.jpg" alt="Imagen 1">
                 <h2> María </h2>
-               
-                <h4>Activa Ahora</h4>
+                                            
+                <i class="fa-regular fa-message"></i>
+                <i class="fa-solid fa-bars"></i>     
+
+                <div>
+                    <h4>Activa Ahora</h4>
+                </div>
             </div>
 
             <div class="boxes caracteristicas">
